# NERVE

./: CMakeLists.txt  README  master.txt
exeProject/: CMakeLists.txt  Nerve.cpp
include/nrv/: EventObserver.h  GuiTools.h  MessageQueue.h  PluginDeveloperTools.h  SignalsAndSlots.h  type_traits.h
include/nrvApp/: GeneralGui.h  NerveAPI.h  NerveApplication.h  NervePluginBase.h  NervePluginFactory.h  PluginHandler.h  PluginManager.h  PluginModule.h  PluginRegistry.h  ServiceRegistry.h  ServiceRepository.h  SettingsEditor.h  TaskAdapter.cpp  TaskAdapter.h  TaskAdapterGui.cpp  TaskAdapterGui.h  TaskRegistry.h  _UIC_GeneralGui.h  _UIC_SettingsEditor.h  _UIC_TaskAdapterGui.h
include/nrvExe/: NerveApp.h  Task.h
include/nrvGui/: NerveUIFactory.h
include/nrvService/: GenericArgument.h  InvokeMapper.h  Invoker.h  NerveService.h  ServiceBinding.h  ServiceFactory.h  ServiceInvoker.h
include/nrvThread/: BasicModuleUser.h  NerveModule.h  NerveModuleUser.h  NerveThread.h
include/nrvToolbox/: FunctionQueueQt.h  Pause.h  Rebroadcast.h  RebroadcastManager.h  RebroadcastQtAdapter.h  TriBuf.h  _MOC_RebroadcastQtAdapter.cpp  _MOC_RebroadcastQtAdapter.h
plugins/FileWriter/: CMakeLists.txt  IFileWriter.cpp  IFileWriter.h  plugin.cpp
plugins/QtTutorial/: CMakeLists.txt  GuiHeader.h  QtTutorial.cpp  QtTutorial.ui
plugins/centerout/: CMakeLists.txt  GuiHeader.h  GuiImpl.cpp  centerout.cpp  centerout.h  centerout_example.cpp  centerout_temp.h  plugin.h
plugins/nested/: CMakeLists.txt  Gui.cpp  Gui.h  TutorialPlugin.h  nested.cpp  nested.ui
plugins/optotrak/: CMakeLists.txt  GuiHeader.h  IOptotrak.cpp  IOptotrak.h  Optotrak.cpp  Optotrak.ui  OptotrakModule.h  OptotrakWrapper.h
plugins/osgwindow/: CMakeLists.txt  GuiHeader.h  IImpl.h  Impl.h  osgwindow.cpp  osgwindow.ui  osgwindow_guts.h  osgwindow_interface.cpp  osgwindow_interface.h  osgwindow_plugin.cpp  osgwindow_plugin.h
plugins/sceneelements/: BoxElement.h  CMakeLists.txt  Callbacks.h  CameraElement.h  GroupElement.h  MobileElement.h  SceneElement.cpp  SceneElement.h  SphereElement.h  TorusElement.h
plugins/tutorial/: CMakeLists.txt  tutorial.cpp
plugins/windowuser/: CMakeLists.txt  GuiHeader.h  GuiImpl.cpp  SceneElements.h  centerout.cpp  plugin.h  windowuser.cpp  windowuser.ui
src/: CMakeLists.txt
src/nrvApp/: CMakeLists.txt  FunctionQueueQt.cpp  GeneralGui.cpp  GeneralGui.ui  NerveAPI.cpp  NerveApplication.cpp  NervePluginFactory.cpp  PluginHandler.cpp  PluginRegistry.cpp  Rebroadcast.cpp  RebroadcastManager.cpp  SettingsEditor.cpp  SettingsEditor.ui  Task.cpp  TaskAdapter.cpp  TaskAdapterGui.cpp  TaskAdapterGui.ui  TaskRegistry.cpp  _MOC_GeneralGui.cpp  _MOC_RebroadcastQtAdapter.cpp  _MOC_SettingsEditor.cpp  _MOC_TaskAdapterGui.cpp  _UIC_GeneralGui.h  _UIC_SettingsEditor.h  _UIC_TaskAdapterGui.h
src/nrvExe/: NerveApp.cpp
